nft list view spacing fix

--- a/src/components/NFT/NewNFT.css
+++ b/src/components/NFT/NewNFT.css
@@ -260,7 +260,7 @@
 .nftListed__info {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 4px;
     color: #222222;
 }
 .nftListed__info .name {
@@ -439,9 +439,9 @@
 .not-whitelisted__img-cover {
     position: absolute;
     height: 100%;
-    width: 100%;
+    width: 75%;
     backdrop-filter: blur(2.5px);
-    border-radius: 8px;
+    border-radius: 4px;
 }
 .not-whitelisted__button:hover {
     box-shadow: 0px 1px 9px rgba(55, 63, 92, 0.52);
